# endless-sky

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  SConstruct  copyright  credits.txt.in  docker-compose.yml  io.github.endless_sky.endless_sky.json  keys.txt  readme-developer.md  vcpkg.json
.github/: path-filters.yml
.github/actions/: action.yml
.github/actions/macos/: action.yml
.github/actions/ubuntu/: action.yml
.github/actions/windows/: action.yml
.github/dependencies/: action.yml
.github/sccache/: action.yml
.github/workflows/: build-ci.yml  build-ubuntu.yml  cd.yaml  cd.yml  cd_release.yaml  cd_release.yml  ci.yml  compute-changes.yml  publish.yml  steam.yml
EndlessSky.xcodeproj/: project.pbxproj
app/: EndlessSky-Info.plist.in  endless-sky.6.in
data/human/: jobs.txt
data/remnant/: remnant 1 introduction.txt  remnant jobs.txt
docs/: readme-developer.md  readme-steam.md
docs/rfcs/text/: 0000-outfit-types.md
overlays/: macos64-release.cmake
overlays/openal-soft/: portfile.cmake  vcpkg.json
resources/: EndlessSky-Info.plist.in  endless-sky.6.in  endless-sky.exe.manifest.in
source/: AI.cpp  AI.h  Audio.cpp  CMakeLists.txt  DistanceMap.cpp  Engine.cpp  EsUuid.cpp  Files.cpp  FrameTimer.cpp  GameData.cpp  GameData.h  GameWindow.cpp  ImageSet.cpp  ImageSet.h  Interface.cpp  Interface.h  LocationFilter.cpp  MapDetailPanel.cpp  MapOutfitterPanel.cpp  MapPanel.cpp  MapShipyardPanel.cpp  OutfitterPanel.cpp  PlanetLabel.cpp  Ship.cpp  Ship.h  Sound.cpp  Sprite.cpp  Sprite.h  StarField.cpp  StellarObject.cpp  System.cpp  Test.cpp  Test.h  TestContext.h  UI.cpp  UI.h  Version.cpp.in  Version.h  Version.h.in  WinApp.rc  (+6 more)
source/glad/: glad.h  glad_glx.h  glad_wgl.h
steam/: Dockerfile  docker-compose.yml
tests/: CMakeLists.txt  README.md
tests/integration/: IntegrationTests.cmake  run_tests_headless.sh
tests/src/: test_datafile.cpp
tests/unit/: CMakeLists.txt
tests/unit/src/: test_esuuid.cpp  test_weightedList.cpp
utils/: build_appimage.sh  check_cmake.sh
